--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
+
+  <!-- GSAP + ScrollTrigger CDN -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 </head>
 <body>
-  <!-- Canvas para partículas -->
-  <canvas id="particles"></canvas>
 
   <!-- Navbar -->
   <nav>
@@ -25,79 +28,66 @@
         <li><a href="#depoimentos">Depoimentos</a></li>
         <li><a href="#contato">Contato</a></li>
       </ul>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
     </div>
   </nav>
 
-  <div class="container">
-    <!-- Cabeçalho -->
-    <header class="fade-in">
-      <h1>Madu Aguirres</h1>
-      <p>Futura publicitária • Criatividade • Arte</p>
-    </header>
+  <!-- Hero -->
+  <section class="hero">
+    <h1>Madu Aguirres</h1>
+    <p>Futura publicitária • Criatividade • Arte</p>
+  </section>
 
-    <!-- Seção Sobre -->
-    <section id="sobre" class="fade-in">
-      <img src="Madu.png" alt="Foto da Madu">
-      <div>
-        <h2>Sobre Mim</h2>
-        <p>Sou a Madu, estudante apaixonada por comunicação, arte e criatividade. 
-        Meu sonho é ser publicitária e contar histórias que inspirem pessoas.</p>
-      </div>
-    </section>
+  <!-- Sobre -->
+  <section id="sobre" class="full-screen fade-up">
+    <h2>Sobre Mim</h2>
+    <p>Sou a Madu, estudante apaixonada por comunicação, arte e criatividade. Meu sonho é ser publicitária e contar histórias que inspirem pessoas.</p>
+  </section>
 
-    <!-- Seção Portfólio -->
-    <section id="portfolio" class="fade-in">
-      <h2>Portfólio</h2>
-      <div class="cards-3d">
-        <div class="card-3d"><div class="card-inner">📸 Fotografia Criativa</div></div>
-        <div class="card-3d"><div class="card-inner">🎨 Artes Digitais</div></div>
-        <div class="card-3d"><div class="card-inner">✍️ Textos Publicitários</div></div>
-      </div>
-    </section>
+  <!-- Portfólio -->
+  <section id="portfolio" class="full-screen fade-up">
+    <h2>Portfólio</h2>
+    <div class="portfolio-item">📸 Fotografia Criativa</div>
+    <div class="portfolio-item">🎨 Artes Digitais</div>
+    <div class="portfolio-item">✍️ Textos Publicitários</div>
+  </section>
 
-    <!-- Seção Depoimentos -->
-    <section id="depoimentos" class="fade-in">
-      <h2>Depoimentos</h2>
-      <div class="testimonials">
-        <div class="testimonial">
-          <p>"A Madu é incrivelmente criativa e detalhista em tudo que faz!"</p>
-          <span>- Professora de Comunicação</span>
-        </div>
-        <div class="testimonial">
-          <p>"Seus trabalhos sempre transmitem emoção e profissionalismo."</p>
-          <span>- Colega de Projeto</span>
-        </div>
-        <div class="testimonial">
-          <p>"A Madu tem um talento único para contar histórias através da arte."</p>
-          <span>- Cliente</span>
-        </div>
-      </div>
-    </section>
+  <!-- Depoimentos -->
+  <section id="depoimentos" class="full-screen fade-up">
+    <h2>Depoimentos</h2>
+    <div class="testimonial">
+      <p>"A Madu é incrivelmente criativa e detalhista em tudo que faz!"</p>
+      <span>- Professora de Comunicação</span>
+    </div>
+    <div class="testimonial">
+      <p>"Seus trabalhos sempre transmitem emoção e profissionalismo."</p>
+      <span>- Colega de Projeto</span>
+    </div>
+    <div class="testimonial">
+      <p>"A Madu tem um talento único para contar histórias através da arte."</p>
+      <span>- Cliente</span>
+    </div>
+  </section>
 
-    <!-- Seção Contato -->
-    <section id="contato" class="fade-in">
-      <h2>Contato</h2>
-      <ul>
-        <li><a href="https://www.youtube.com/@maduaguirres" target="_blank">YouTube</a></li>
-        <li><a href="https://www.instagram.com/madu_aguirres" target="_blank">Instagram</a></li>
-        <li>Email: maduaguirres@gmail.com</li>
-      </ul>
-    </section>
-  </div>
+  <!-- Contato -->
+  <section id="contato" class="full-screen fade-up">
+    <h2>Contato</h2>
+    <ul>
+      <li><a href="https://www.youtube.com/@maduaguirres" target="_blank">YouTube</a></li>
+      <li><a href="https://www.instagram.com/madu_aguirres" target="_blank">Instagram</a></li>
+      <li>Email: maduaguirres@gmail.com</li>
+    </ul>
+  </section>
 
-  <!-- Botão Voltar ao Topo -->
-  <button id="topBtn">⬆</button>
+  <!-- Botão voltar ao topo -->
+  <button class="back-to-top">⬆</button>
 
-  <!-- Rodapé -->
-  <footer>
+  <!-- Footer -->
+  <footer class="full-screen fade-up">
     <p>© 2025 - Criado com ❤ por Vinicius Carvalho</p>
   </footer>
 
-  <!-- JavaScript -->
+  <!-- JS -->
   <script src="script.js"></script>
+
 </body>
 </html>
