Atualização do site: favicon e melhorias

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   
   <!-- Favicon -->
-  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="icon" href="icon.jpg"type="image/jpg">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
